--- a/init_day4_homepage.html
+++ b/init_day4_homepage.html
@@ -8,6 +8,11 @@
     </head>
 
     <body>
+        <div id="header">
+            <a href="init_day4_homepage.html">
+                <img src="logo.png" class="logo-image" width="5%" href="init_day">
+            </a>
+        </div>
         <div id="navigation-bar">
             <p class="navigation-item">Enter some options here</p>
             <!--ideas: tips for travel, best places to visit per season, etc.-->
