changes to homepage

--- a/init_day4_homepage.html
+++ b/init_day4_homepage.html
@@ -18,8 +18,15 @@
             <!--ideas: tips for travel, best places to visit per season, etc.-->
         </div>
 
-        <div id="search-bar">
+        <br>
 
+        <h2 class="explore">Which place would you like to explore?</h2> <br>
+        <div id="home">
+            <a href="paris.html" target="_blank" class="destination">Paris</a>
+            <a href="london.html" target="_blank" class="destination"
+            >London</a>
+            <a href="hawaii.html" target="_blank" class="destination"
+            >Hawaii</a>
         </div>
     </body>
 </html>
