changed navigation bar on homepage

--- a/init_day4_homepage.html
+++ b/init_day4_homepage.html
@@ -14,7 +14,9 @@
             </a>
         </div>
         <div id="navigation-bar">
-            <p class="navigation-item">Enter some options here</p>
+            <a href="init_day4_homepage.html" class="navigation-item">Home</a>
+            <a href="/travel2/index.html" class="navigation-item">Travel</a>
+            <a href="/travel/index.html" class="navigation-item">Tips</a>
             <!--ideas: tips for travel, best places to visit per season, etc.-->
         </div>
 
