minor adjustments to homepage

--- a/init_day4_homepage.html
+++ b/init_day4_homepage.html
@@ -14,15 +14,19 @@
             </a>
         </div>
         <div id="navigation-bar">
-            <a href="init_day4_homepage.html" class="navigation-item">Home</a>
-            <a href="/travel2/index.html" class="navigation-item">Travel</a>
-            <a href="/travel/index.html" class="navigation-item">Tips</a>
+            <a href="init_day4_homepage.html" class="navigation-item" target="_blank">Home</a>
+            <a href="/travel2/index.html" class="navigation-item"  target="_blank">Travel</a>
+            <a href="/travel/index.html" class="navigation-item"  target="_blank">Tips</a>
             <!--ideas: tips for travel, best places to visit per season, etc.-->
         </div>
 
         <br>
 
         <h2 class="explore">Which place would you like to explore?</h2> <br>
+        <p class="welcome-statement">Welcome to our website. Here you will find the best places to visit
+            on your next holiday that are not crowded and beautiful
+        </p>
+        
         <div id="home">
             <a href="paris.html" target="_blank" class="destination">Paris</a>
             <a href="london.html" target="_blank" class="destination"
