--- a/init_day4_homepage.html
+++ b/init_day4_homepage.html
@@ -15,8 +15,8 @@
         </div>
         <div id="navigation-bar">
             <a href="init_day4_homepage.html" class="navigation-item" target="_blank">Home</a>
-            <a href="/travel2/index.html" class="navigation-item"  target="_blank">Travel</a>
-            <a href="/travel/index.html" class="navigation-item"  target="_blank">Tips</a>
+            <a href="travel/index.html" class="navigation-item"  target="_blank">Travel</a>
+            <a href="travel2/index.html" class="navigation-item"  target="_blank">Tips</a>
             <!--ideas: tips for travel, best places to visit per season, etc.-->
         </div>
 
