added locations paris and hawaii

--- a/paris.html
+++ b/paris.html
@@ -1,1 +1,31 @@
 <!--Locations in paris-->
+<html>
+    <head>
+        <meta charset="utf-8" />
+        <title>Locations in Paris</title>
+        <link rel="stylesheet" type="text/css" href="init_day4_stylesheet.css">
+    </head>
+
+    <body>
+        <div id="header">
+            <a href="init_day4_homepage.html">
+                <img src="logo.png" class="logo-image" width="5%" href="init_day">
+            </a>
+        </div>
+        <div id="navigation-bar">
+            <a href="init_day4_homepage.html" class="navigation-item" target="_blank">Home</a>
+            <a href="travel/index.html" class="navigation-item"  target="_blank">Travel</a>
+            <a href="travel2/index.html" class="navigation-item"  target="_blank">Tips</a>
+            <!--ideas: tips for travel, best places to visit per season, etc.-->
+        </div>
+
+        <br>
+        <h2 class="loc-header">Places in Paris!</h2>
+        <div id="place">
+            <div class="loc-item" style="background: url(paris-plant.jpg.png)">Musée du Quai Branly</div>
+            <div class="loc-item" style="background: url(paris-clock.jpg.png);"> Palais de la Cité</div>
+            <div class="loc-item" style="background: url(paris-street.jpg.png);">Rue Dénoyez</div>
+
+        </div>
+    </body>
+</html>
