--- a/hawaii.html
+++ b/hawaii.html
@@ -20,19 +20,14 @@
             <!--ideas: tips for travel, best places to visit per season, etc.-->
         </div>
 
-        <br>
+        <h2 class="loc-header">Places in Hawaii!</h2>
+        <div id="place">
+            <div class="loc-item" style="background: url(maui.jpg)">Maui</div>
+            <div class="loc-item" style="background: url(hana.jpg);"> Hana Lava Tubes</div>
+            <div class="loc-item" style="background: url(wahiawa-maze.jpg);">Wahiawa Maze</div>
 
-        <h2 class="explore">Which place would you like to explore?</h2> <br>
-        <p class="welcome-statement">Welcome to Crowder! Here you will find the best places to visit
-            on your next holiday that are not crowded and beautiful
-        </p>
-        
-        <div id="home">
-            <a href="paris.html" target="_blank" class="destination">Paris</a>
-            <a href="kerala.html" target="_blank" class="destination"
-            >India</a>
-            <a href="hawaii.html" target="_blank" class="destination"
-            >Hawaii</a>
         </div>
+
     </body>
-</html>
+
+    </html>
