--- a/init_day4_homepage.html
+++ b/init_day4_homepage.html
@@ -29,7 +29,7 @@
         
         <div id="home">
             <a href="paris.html" target="_blank" class="destination">Paris</a>
-            <a href="kerala.html" target="_blank" class="destination"
+            <a href="travel3/index.html" target="_blank" class="destination"
             >India</a>
             <a href="hawaii.html" target="_blank" class="destination"
             >Hawaii</a>
