Changed India to Kerala

--- a/init_day4_homepage.html
+++ b/init_day4_homepage.html
@@ -30,7 +30,7 @@
         <div id="home">
             <a href="paris.html" target="_blank" class="destination">Paris</a>
             <a href="travel3/index.html" target="_blank" class="destination"
-            >India</a>
+            >Kerala</a>
             <a href="hawaii.html" target="_blank" class="destination"
             >Hawaii</a>
         </div>
